cloud/k8s/demo/manifests/simple-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
      - name: simple-app-container
        image: simple-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
